# omniomics

./: .gitignore  LOCAL_SETUP.md  PROJECT_PLAN.md  PROTOTYPE_REPORT.md  README.md  anchor_family_consensus.csv  anchor_family_voe.csv  auto_integrate_results.csv  blca_pancan_subtypes.tsv  brca_harmonization_metrics.csv  clinical_basal_survival.csv  combat_benchmark.csv  cross_study_rescue_FC.csv  disagreement_axes.csv  disagreement_regime.csv  discordance_test_results.csv  discovery_enrichment.csv  discovery_er_results.csv  discovery_her2_results.csv  discovery_her2_verification.csv  discovery_nsclc_io_results.csv  discovery_results.csv  discovery_verification.csv  dmoi_enhancer_auroc.csv  dmoi_fusion_auroc.csv  dmoi_v2_auroc.csv  endpoint_panel.csv  external_validation_blca_clinical.csv  external_validation_blca_subtype.csv  external_validation_cesc.csv  external_validation_esca.csv  external_validation_her2_metabric.csv  external_validation_hnsc.csv  external_validation_lung.csv  external_validation_metabric.csv  external_validation_stad.csv  external_validation_ucec.csv  fusion_gain_results.csv  gse57577_ctx_methylation.csv  gse57577_localization.csv  (+56 more)
.github/workflows/: ci.yml
golden/: GOLDEN_TASKS.md  golden_tasks.yaml  run_golden_brca.py
nextflow/: README.md  build_samplesheet.py  check_aim1.sh  ids.csv  install_tools.sh  preflight_check.py  run_aim1_fast.sh  run_week1.sh  samplesheet.csv  srr_sample_map.csv
nextflow/chipseq/: ids.csv  run_chipseq.sh  srr_sample_map.csv
omniomics/: __init__.py  cli.py  config.py  expression.py  geo.py  golden_check.py  harmonize.py  loaders.py  methylation.py  multiomics.py  prepare.py  representations.py  scale.py
reports/: DMOI_method_assessment.md  GSE57577_2015_vs_2026_report.docx  RELEASE_CHECKLIST.md  anchor_standardization_discussion.md  anchored_integration_manuscript.md  anchored_integration_methods.md  anchored_integration_preprint.md  anchored_integration_tutorial.md  anchored_integration_whitepaper.docx  anchored_integration_whitepaper.md  cross_cancer_validation_notebooklm.md  dmoi_age_anchor.py  dmoi_anchor_family_voe.py  dmoi_anchored.py  dmoi_clinical_survival.py  dmoi_crit.py  dmoi_discordance_tests.py  dmoi_discovery_er.py  dmoi_discovery_her2.py  dmoi_discovery_methylation.py  dmoi_discovery_nsclc_io.py  dmoi_endpoint_panel.py  dmoi_expB.py  dmoi_external_TEMPLATE.py  dmoi_external_age.py  dmoi_external_blca.py  dmoi_external_cesc.py  dmoi_external_esca.py  dmoi_external_her2_metabric.py  dmoi_external_hnsc.py  dmoi_external_lung.py  dmoi_external_metabric.py  dmoi_external_stad.py  dmoi_external_subtype.py  dmoi_external_ucec.py  dmoi_fusion_gain.py  dmoi_hypothesis_anchor.py  dmoi_hypothesis_metabric_diagnosis.py  dmoi_hypothesis_screen.py  dmoi_hypothesis_screen_endpoints.py  (+21 more)
swarm/: SWARM_WIRING.md  install.sh  settings.snippet.json
tests/: test_dmoi_v2.py  test_downstream.py  test_golden.py  test_representations.py  test_scale.py
(+5 files in other folders)
