[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omniomics"
version = "0.3.0"
description = "Anchored multi-omics integration + knowledge-anchored residual discovery (never below the best single view), with out-of-core scaling and gated learned-representation adoption"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "H. Ryan Kim", email = "hryankim1221@gmail.com" }]
keywords = ["multi-omics", "integration", "bioinformatics", "gene-signature", "prior-informed", "TCGA", "epigenetics", "discovery"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.1",
  "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://github.com/hryankim-architect/omniomics"
Repository = "https://github.com/hryankim-architect/omniomics"
Issues = "https://github.com/hryankim-architect/omniomics/issues"

[project.optional-dependencies]
enrichment = ["gseapy>=1.0"]   # GO/pathway enrichment (run_go.py)
modern = ["pydeseq2>=0.4"]     # count-based DESeq2 reanalysis (run_modern_de.py, Aim 1)
scale = ["pyarrow>=12", "h5py>=3"]   # out-of-core parquet / HDF5 backends for omniomics.scale
deep = ["scvi-tools>=1.0"]           # large-n VAE backend for representations.make_encoder('vae')
test = ["pytest>=7"]

[project.scripts]
omniomics-golden       = "omniomics.cli:golden"
omniomics-prepare-brca = "omniomics.cli:prepare_brca"

[tool.setuptools]
packages = ["omniomics"]

[tool.setuptools.package-dir]
omniomics = "omniomics"
